# grpc-example-api-backend-service

./: README.md  app.py  gunicorn.conf.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app_service/: manager_book_route.py  route.py  social_book_route.py  user_gateway_route.py  user_route.py  utils.py
grpc_service/: book_service.py  user_service.py
tests/: conftest.py  grpc_abc_stub.py
tests/test_route/: test_social_book.py  test_user.py
